# adventofcode2025

./: README.md  pyproject.toml
src/aoc/: util.py
src/aoc/day01/: __main__.py
src/aoc/day02/: __main__.py
src/aoc/day03/: __main__.py
src/aoc/day04/: __main__.py
src/aoc/day05/: __main__.py
src/aoc/day06/: __main__.py
src/aoc/day07/: __main__.py
src/aoc/day08/: __main__.py
src/aoc/day09/: __main__.py
src/aoc/day10/: __main__.py
src/aoc/day11/: __main__.py
src/aoc/day12/: __main__.py
