[project]
name = "adventofcode2025"
version = "0.1.0"
description = "Advent of Code 2025"
readme = "README.md"
authors = [
    { name = "Lehman Garrison", email = "lgarrison@flatironinstitute.org" }
]
requires-python = ">=3.11"
dependencies = []

[tool.uv.build-backend]
module-name = "aoc"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.ruff.format]
quote-style = "single"
